# ai-explorations

sLLM/: llm.py  main.py  pyproject.toml
snakegame/: README.md  model.py  pyproject.toml  snake_env.py  snake_game.py  snake_ppo_ep50000.pt  snake_ppo_model_final.pt  train_ppo.py
