[project]
name = "snakegame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "tensorboard>=2.13.0",
]

[tool.uv]
dev-dependencies = []